--- a/cv/src/app/components/login/login.component.html
+++ b/cv/src/app/components/login/login.component.html
@@ -5,8 +5,8 @@
         <form class="form-signin" (submit)="logIn()">
             <!--  action="/validar" method="POST" -->
             <span id="reauth-email" class="reauth-email"></span>
-            <input type="email" [(ngModel)]="user.email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Correo Electrónico" required autofocus>
-            <input type="password" [(ngModel)]="user.password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Contraseña" required>
+            <input type="email" [(ngModel)]="user.correo" id="inputEmail" name="inputEmail" class="form-control" placeholder="Correo Electrónico" required autofocus>
+            <input type="password" [(ngModel)]="user.clave" id="inputPassword" name="inputPassword" class="form-control" placeholder="Contraseña" required>
             <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Ingresar</button>
         </form>
         <!-- /form -->
