--- a/cv/src/app/components/login/login.component.css
+++ b/cv/src/app/components/login/login.component.css
@@ -11,11 +11,14 @@ html {
 body,
 html {
     height: 100%;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgb(41, 52, 97), rgb(109, 36, 36));
 }
 
 .container {
     justify-content: center;
     margin-left: 100px;
+    padding-top: 50px;
 }
 
 .card-container.card {
@@ -42,7 +45,6 @@ html {
     /* just in case there no content*/
     padding: 20px 25px 30px;
     margin: 0 auto 25px;
-    margin-top: 50px;
     /* shadows and rounded borders */
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
@@ -111,6 +113,7 @@ html {
     box-sizing: border-box;
     background-color: black;
     color: white;
+    padding-left: 15px;
 }
 
 .form-signin .form-control:focus {
@@ -145,7 +148,7 @@ html {
 }
 
 .forgot-password {
-    color: rgb(102, 5, 5);
+    color: rgb(255, 9, 9);
     font-size: 14px;
 }
 
