--- a/cv/src/app/components/login/login.component.html
+++ b/cv/src/app/components/login/login.component.html
@@ -1,19 +1,36 @@
-<div class="container">
-    <div class="card card-container">
-        <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
-        <p id="profile-name" class="profile-name-card"></p>
-        <form class="form-signin" (submit)="logIn()">
-            <!--  action="/validar" method="POST" -->
-            <span id="reauth-email" class="reauth-email"></span>
-            <input type="email" [(ngModel)]="user.correo" id="inputEmail" name="inputEmail" class="form-control" placeholder="Correo Electrónico" required autofocus>
-            <input type="password" [(ngModel)]="user.clave" id="inputPassword" name="inputPassword" class="form-control" placeholder="Contraseña" required>
-            <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Ingresar</button>
-        </form>
-        <!-- /form -->
-        <a href="#" class="forgot-password">
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="card card-container">
+            <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+            <p id="profile-name" class="profile-name-card"></p>
+            <form class="form-signin" (submit)="logIn()">
+                <!--  action="/validar" method="POST" -->
+                <span id="reauth-email" class="reauth-email"></span>
+                <input type="email" [(ngModel)]="user.correo" id="inputEmail" name="inputEmail" class="form-control" placeholder="Correo Electrónico" required autofocus>
+                <input type="password" [(ngModel)]="user.clave" id="inputPassword" name="inputPassword" class="form-control" placeholder="Contraseña" required>
+                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Ingresar</button>
+            </form>
+            <!-- /form -->
+            <a href="#" class="forgot-password">
                 Crear una Nueva Cuenta
             </a>
+        </div>
+        <!-- /card-container -->
     </div>
-    <!-- /card-container -->
-</div>
-<!-- /container -->
+    <!-- /container -->
+
+</body>
+
+</html>
