--- a/cv/src/app/components/login/login.component.html
+++ b/cv/src/app/components/login/login.component.html
@@ -19,11 +19,11 @@
                 <!--  action="/validar" method="POST" -->
                 <span id="reauth-email" class="reauth-email"></span>
                 <input type="email" [(ngModel)]="user.correo" id="inputEmail" name="inputEmail" class="form-control" placeholder="Correo Electrónico" required autofocus>
-                <input type="password" [(ngModel)]="user.clave" id="inputPassword" name="inputPassword" class="form-control" placeholder="Contraseña" required>
+                <input type="password" [(ngModel)]="user.clave" id="inputPassword" name="inputPassword" class="form-control" placeholder="Contraseña" required autofocus>
                 <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Ingresar</button>
             </form>
             <!-- /form -->
-            <a href="#" class="forgot-password">
+            <a href="signup" class="forgot-password">
                 Crear una Nueva Cuenta
             </a>
         </div>
