Added int component.html all personal information fields

--- a/cv/src/app/components/cv/cv.component.html
+++ b/cv/src/app/components/cv/cv.component.html
@@ -21,10 +21,10 @@
                 <input type="text" [(ngModel)]="datosPersonales.identificacion" id="inputIdentificacion" name="inputIdentificacion" class="form-control" placeholder="telefono" required>
                 <input type="text" [(ngModel)]="datosPersonales.telefono" id="inputTelefono" name="inputTelefono" class="form-control" placeholder="Correo Electrónico" required>
                 <input type="text" [(ngModel)]="datosPersonales.pais" id="inputPais" name="inputPais" class="form-control" placeholder="País" required>
-                <input type="text" [(ngModel)]="user.departamento" id="inputdepartamento" name="inputdepartamento" class="form-control" placeholder="Departamento" required>
-                <input type="text" [(ngModel)]="user.puestoDeTrabajo" id="inputtrabajo" name="inputnombretrabajo" class="form-control" placeholder="Puesto de Trabajo" required>
-                <input type="text" [(ngModel)]="user.nombre" id="inputnombre" name="inputnombre" class="form-control" placeholder="Nombres" required>
-                <input type="text" [(ngModel)]="user.apellidos" id="inputapellidos" name="inputapellido" class="form-control" placeholder="Apellidos" required>
+                <input type="text" [(ngModel)]="datosPersonales.departamento" id="inputdepartamento" name="inputdepartamento" class="form-control" placeholder="Departamento" required>
+                <input type="text" [(ngModel)]="datosPersonales.ciudad" id="inputCiudad" name="inputCiudad" class="form-control" placeholder="Ciudad" required>
+                <input type="text" [(ngModel)]="datosPersonales.genero" id="inputGenero" name="inputGenero" class="form-control" placeholder="Género" required>
+                <input type="text" [(ngModel)]="datosPersonales.perfilProfesional" id="inputPerfilProfesional" name="inputPerfilProfesional" class="form-control" placeholder="Perfil Profesional" required>
                 <input type="text" [(ngModel)]="user.correo" id="inputcorreo" name="inputcorreo" class="form-control" placeholder="Correo Electrónico" required>
                 <input type="text" [(ngModel)]="user.clave" id="inputclave" name="inputclave" class="form-control" placeholder="Contraseña" required>
                 <input type="text" [(ngModel)]="user.departamento" id="inputdepartamento" name="inputdepartamento" class="form-control" placeholder="Departamento" required>
