Added in component.html all studies fields

--- a/cv/src/app/components/cv/cv.component.html
+++ b/cv/src/app/components/cv/cv.component.html
@@ -25,12 +25,12 @@
                 <input type="text" [(ngModel)]="datosPersonales.ciudad" id="inputCiudad" name="inputCiudad" class="form-control" placeholder="Ciudad" required>
                 <input type="text" [(ngModel)]="datosPersonales.genero" id="inputGenero" name="inputGenero" class="form-control" placeholder="Género" required>
                 <input type="text" [(ngModel)]="datosPersonales.perfilProfesional" id="inputPerfilProfesional" name="inputPerfilProfesional" class="form-control" placeholder="Perfil Profesional" required>
-                <input type="text" [(ngModel)]="user.correo" id="inputcorreo" name="inputcorreo" class="form-control" placeholder="Correo Electrónico" required>
-                <input type="text" [(ngModel)]="user.clave" id="inputclave" name="inputclave" class="form-control" placeholder="Contraseña" required>
-                <input type="text" [(ngModel)]="user.departamento" id="inputdepartamento" name="inputdepartamento" class="form-control" placeholder="Departamento" required>
-                <input type="text" [(ngModel)]="user.puestoDeTrabajo" id="inputtrabajo" name="inputnombretrabajo" class="form-control" placeholder="Puesto de Trabajo" required>
-                <input type="text" [(ngModel)]="user.nombre" id="inputnombre" name="inputnombre" class="form-control" placeholder="Nombres" required>
-                <input type="text" [(ngModel)]="user.apellidos" id="inputapellidos" name="inputapellido" class="form-control" placeholder="Apellidos" required>
+                <input type="text" [(ngModel)]="estudios.nivelEstudios" id="inputNivelEstudios" name="inputNivelEstudios" class="form-control" placeholder="Nivel estudios" required>
+                <input type="text" [(ngModel)]="estudios.titulos" id="inputTitulos" name="inputTitulos" class="form-control" placeholder="inputTitulos" required>
+                <input type="text" [(ngModel)]="estudios.descripcion" id="inputDescripcion" name="inputDescripcion" class="form-control" placeholder="descripción" required>
+                <input type="text" [(ngModel)]="estudios.centrosEducativos" id="inputCentrosEducativos" name="inputCentrosEducativos" class="form-control" placeholder="centros Educativos" required>
+                <input type="text" [(ngModel)]="estudios.duracion" id="inputDuracion" name="inputDuracion" class="form-control" placeholder="Duración" required>
+                <input type="text" [(ngModel)]="estudios.lugar" id="inputLugar" name="inputLugar" class="form-control" placeholder="Lugar" required>
                 <input type="text" [(ngModel)]="user.correo" id="inputcorreo" name="inputcorreo" class="form-control" placeholder="Correo Electrónico" required>
                 <input type="text" [(ngModel)]="user.clave" id="inputclave" name="inputclave" class="form-control" placeholder="Contraseña" required>
                 <input type="text" [(ngModel)]="user.departamento" id="inputdepartamento" name="inputdepartamento" class="form-control" placeholder="Departamento" required>
