Added in component.html all experiencie fields

--- a/cv/src/app/components/cv/cv.component.html
+++ b/cv/src/app/components/cv/cv.component.html
@@ -31,9 +31,9 @@
                 <input type="text" [(ngModel)]="estudios.centrosEducativos" id="inputCentrosEducativos" name="inputCentrosEducativos" class="form-control" placeholder="centros Educativos" required>
                 <input type="text" [(ngModel)]="estudios.duracion" id="inputDuracion" name="inputDuracion" class="form-control" placeholder="Duración" required>
                 <input type="text" [(ngModel)]="estudios.lugar" id="inputLugar" name="inputLugar" class="form-control" placeholder="Lugar" required>
-                <input type="text" [(ngModel)]="user.correo" id="inputcorreo" name="inputcorreo" class="form-control" placeholder="Correo Electrónico" required>
-                <input type="text" [(ngModel)]="user.clave" id="inputclave" name="inputclave" class="form-control" placeholder="Contraseña" required>
-                <input type="text" [(ngModel)]="user.departamento" id="inputdepartamento" name="inputdepartamento" class="form-control" placeholder="Departamento" required>
+                <input type="text" [(ngModel)]="experiencia.cargo" id="inputCargo" name="inputCargo" class="form-control" placeholder="Cargo" required>
+                <input type="text" [(ngModel)]="experiencia.nombreEmpresa" id="inputNombreEmpresa" name="inputNombreEmpresa" class="form-control" placeholder="Nombre Empresa" required>
+                <input type="text" [(ngModel)]="experiencia.duracion" id="inputExperienciaDuracion" name="inputExperienciaDuracion" class="form-control" placeholder="Duración" required>
                 <div id="remember" class="checkbox">
                 </div>
                 <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Crear Cuenta</button>
